# ledger-rs

./: .gitignore  Cargo.toml  FUNDING.json  LICENSE  README.md  rustfmt.toml
.cargo/: audit.toml
.circleci/: config.yml
.github/workflows/: main.yaml  rust_audit.yaml  rust_periodic_audit.yaml
bip44/: Cargo.toml
bip44/src/: errors.rs  lib.rs
examples/: .gitignore  README.md
examples/browser/: index.html  index.js  package.json  webpack.config.js
examples/browser/certs/: openssl.cnf  server.cert  server.key
examples/node/: main.js  package.json
examples/wasm/: Cargo.toml
examples/wasm/src/: lib.rs  log.rs
ledger-apdu/: Cargo.toml
ledger-apdu/src/: error.rs  lib.rs  tests.rs
ledger-apdu/src/apdus/: app_info.rs  device_info.rs  mod.rs  version.rs
ledger-generic/: Cargo.toml
ledger-generic-rs/: README.md
ledger-generic-rs/src/: lib.rs
ledger-generic/src/: lib.rs
ledger-transport/: Cargo.toml  README.md
ledger-transport-hid/: Cargo.toml  README.md
ledger-transport-hid/src/: errors.rs  lib.rs
ledger-transport-rs/: Cargo.toml  README.md
ledger-transport-rs/src/: lib.rs
ledger-transport-speculos/: Cargo.toml  README.md
ledger-transport-speculos/src/: errors.rs  lib.rs
ledger-transport-tcp/: Cargo.toml  README.md
ledger-transport-tcp/src/: error.rs  errors.rs  lib.rs
ledger-transport-wasm/: Cargo.toml  README.md
ledger-transport-wasm/src/: errors.rs  lib.rs
ledger-transport-zemu/: .gitignore  Cargo.toml  README.md  build.rs  zemu.proto
ledger-transport-zemu/src/: errors.rs  lib.rs
ledger-transport/src/: apdu_transport_native.rs  apdu_transport_wasm.rs  errors.rs  lib.rs
ledger-zondax-generic/: Cargo.toml  README.md
ledger-zondax-generic/src/: common.rs  errors.rs  lib.rs
src/: error.rs  lib.rs
tests/: .gitignore  Makefile  package.json  test.js
