[workspace]
members = [
    "ledger-apdu",
    "ledger-transport",
    "ledger-transport-hid",
#    "ledger-transport-zemu",
    "ledger-zondax-generic",
#    "ledger-transport-tcp"
]

exclude = [
  "examples/wasm"
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
overflow-checks = true
