[package]
name = "ledger-apdu"
description = "Ledger Hardware Wallet - Common APDU Protocol Types"
version = "0.10.0"
license = "Apache-2.0"
authors = ["Zondax AG <hello@zondax.ch>"]
homepage = "https://github.com/zondax/ledger-rs"
repository = "https://github.com/zondax/ledger-rs"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "blue", "apdu"]
edition = "2021"

[features]
std = ["snafu/std", "no-std-compat/std", "thiserror" ]
default = ["std"]

[dependencies]
arrayref = "0.3.6"
no-std-compat = "0.4.1"
snafu = { version = "0.7", features = ["rust_1_46"], default_features = false }
thiserror = { version = "1.0.35", default_features = false, optional = true }
bitflags = "1.3.2"
num_enum = { version = "0.5.7", default_features = false }
byteorder = { version = "1.4.3", default_features = false }
strum = { version = "0.24.1", default_features = false, features = [ "derive" ] }
encdec = "0.6.1"

# Optionally enable serde for APDUs
serde = { version = "1.0.140", default_features = false, features = [ "derive" ], optional = true }

[dev-dependencies]
rand = "0.8.5"
