[package]
name = "ledger-apdu"
description = "Ledger Hardware Wallet - Common APDU Protocol Types"
version = "0.11.0"
license = "Apache-2.0"
authors = ["Zondax AG <hello@zondax.ch>"]
homepage = "https://github.com/zondax/ledger-rs"
repository = "https://github.com/zondax/ledger-rs"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "blue", "apdu"]
edition = "2021"

[features]
std = ["snafu/std", "no-std-compat/std"]
default = ["std"]

[dependencies]
arrayref = "0.3"
no-std-compat = "0.4"
snafu = { version = "0.8", default-features = false }
