[package]
name = "ledger-transport-hid"
description = "Ledger Hardware Wallet - HID Transport"
version = "0.11.0"
license = "Apache-2.0"
authors = ["Zondax AG <hello@zondax.ch>"]
homepage = "https://github.com/zondax/ledger-rs"
repository = "https://github.com/zondax/ledger-rs"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "blue", "apdu"]
edition = "2021"

[dependencies]
libc = "0.2"
byteorder = "1.5"
cfg-if = "1"
thiserror = "1"
hex = "0.4"
log = "0.4"

ledger-transport = { path = "../ledger-transport" }
hidapi = { version = "2.6.1", features = ["linux-static-hidraw"], default-features = false }

[dev-dependencies]
once_cell = "1"
ledger-zondax-generic = { path = "../ledger-zondax-generic" }
serial_test = "3"
env_logger = "0.11"
futures = "0.3"
