[package]
name = "ledger-transport-tcp"
description = "Ledger Transport via raw TCP socket"
version = "0.0.1"
license = "Apache-2.0"
authors = ["microengineer18@gmail.com"]
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "blue", "apdu"]
autobenches = false
edition = "2018"


[lib]
name = "ledger_tcp"

[dependencies]
thiserror = "1.0.20"
log = "0.4.11"
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
ledger-apdu = { path = "../ledger-apdu", version = "0.7.0" }
