[package]
name = "ledger-transport-tcp"
description = "Ledger Hardware Wallet - TCP (Speculos) Transport"
version = "0.10.0"
license = "Apache-2.0"
authors = ["Linfeng Yuan <linfeng@crypto.com>"]
homepage = "https://github.com/zondax/ledger-rs"
repository = "https://github.com/zondax/ledger-rs"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "blue", "apdu", "tcp"]
edition = "2021"

[features]
default = []

[dependencies]
thiserror = "1.0"
log = "0.4"
async-trait = "0.1.56"
byteorder = "1.4.3"

ledger-transport = "0.10"
tokio = { version = "1.20.1", features = [ "net", "time" ] }

clap = { version = "3.2.15", features = [ "derive", "env" ], optional = true }

