[package]
name = "ledger-transport-wasm"
version = "0.9.0"
license = "Apache-2.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
edition = "2021"
homepage = "https://github.com/zondax/ledger-rs"
repository = "https://github.com/zondax/ledger-rs"
readme = "README.md"
categories = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "blue", "apdu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = "0.3.21"
js-sys = "0.3.56"
thiserror = "1.0.30"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"

ledger-transport = "0.9.0"
