[package]
name = "ledger-transport-zemu"
description = "Ledger Hardware Wallet - Zemu Transport"
version = "0.9.0"
license = "Apache-2.0"
authors = ["Linfeng Yuan <linfeng@crypto.com>"]
homepage = "https://github.com/zondax/ledger-rs"
repository = "https://github.com/zondax/ledger-rs"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "blue", "apdu", "zemu"]
edition = "2018"

[dependencies]
thiserror = "1.0.20"
log = "0.4.11"
protobuf = "2"
grpc = "0.8.1"
grpc-protobuf = "0.8.1"
reqwest = { version = "0.10", features = ["json"]}
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }

ledger-transport = "0.9.0"

[build-dependencies]
protoc-rust-grpc = "0.8.1"
glob = "0.3.0"

