[package]
name = "ledger-transport-zemu"
description = "Ledger Hardware Wallet - Zemu Transport"
version = "0.10.0"
license = "Apache-2.0"
authors = ["Linfeng Yuan <linfeng@crypto.com>"]
homepage = "https://github.com/zondax/ledger-rs"
repository = "https://github.com/zondax/ledger-rs"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "blue", "apdu", "zemu"]
edition = "2021"

[dependencies]
thiserror = "1.0"
log = "0.4"
protobuf = "2"
grpc = "0.8"
grpc-protobuf = "0.8"
reqwest = { version = "0.11", features = ["json"]}
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }

ledger-transport = "0.10"

[build-dependencies]
protoc-rust-grpc = "0.8"
glob = "0.3"

