[package]
name = "ledger-transport"
description = "Ledger Hardware Wallet - Generic Transport"
version = "0.9.0"
license = "Apache-2.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
homepage = "https://github.com/zondax/ledger-rs"
repository = "https://github.com/zondax/ledger-rs"
readme = "README.md"
categories = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "blue", "apdu"]
edition = "2018"

[dependencies]
async-trait = "0.1.53"

ledger-apdu = "0.9.0"
