[package]
name = "ledger-transport"
description = "Ledger Hardware Wallet - Generic Transport"
version = "0.11.0"
license = "Apache-2.0"
authors = ["Zondax AG <hello@zondax.ch>"]
homepage = "https://github.com/zondax/ledger-rs"
repository = "https://github.com/zondax/ledger-rs"
readme = "README.md"
categories = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "blue", "apdu"]
edition = "2021"

[dependencies]
async-trait = "0.1.80"
ledger-apdu = { path = "../ledger-apdu" }
