[package]
name = "ledger-zondax-generic"
description = "Ledger Hardware Wallet - Common APDU Protocol Types"
version = "0.9.0"
license = "Apache-2.0"
authors = ["Zondax GmbH <hello@zondax.ch>"]
homepage = "https://github.com/zondax/ledger-rs"
repository = "https://github.com/zondax/ledger-rs"
readme = "README.md"
categories = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "blue", "apdu"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

ledger-transport = "0.9.0"
async-trait = "0.1.53"
