[package]
name = "ledger-zondax-generic"
description = "Ledger Hardware Wallet - Common APDU Protocol Types"
version = "0.11.2"
license = "Apache-2.0"
authors = ["Zondax AG <hello@zondax.ch>"]
homepage = "https://github.com/zondax/ledger-rs"
repository = "https://github.com/zondax/ledger-rs"
readme = "README.md"
categories = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "blue", "apdu"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"

ledger-transport = "0.11.0"
async-trait = "0.1"
